--- a/src/app/modules/core/components/about-us/about-us.component.html
+++ b/src/app/modules/core/components/about-us/about-us.component.html
@@ -18,6 +18,6 @@
   <div class="contacts__container container">
     <span class="contacts__text">Майбутнє за доступністю.</span>
     <span class="contacts__text">Створюйте її з нами.</span>
-    <span class="contacts__email">axycat@inclusive-it.org</span>
+    <a href="mailto:axycat@inclusive-it.org" class="contacts__email">axycat@inclusive-it.org</a>
   </div>
 </section>
