--- a/src/app/modules/core/components/home/home.component.html
+++ b/src/app/modules/core/components/home/home.component.html
@@ -74,6 +74,6 @@
 
 <section class="contacts">
   <div class="contacts__container container">
-    <span class="contacts__text">axycat@inclusive-it.org</span>
+    <a href="mailto:axycat@inclusive-it.org" class="contacts__text">axycat@inclusive-it.org</a>
   </div>
 </section>
