--- a/src/app/modules/core/components/home/home.component.sass
+++ b/src/app/modules/core/components/home/home.component.sass
@@ -173,6 +173,7 @@
     font-family: 'IBMPlexSans-SemiBold', Arial, sans-serif
     font-size: 48px
     font-weight: 600
+    text-decoration: none
     @include respond-to(middle-desktop)
         font-size: 40px
 
