--- a/src/app/modules/core/components/about-us/about-us.component.sass
+++ b/src/app/modules/core/components/about-us/about-us.component.sass
@@ -76,5 +76,6 @@
     font-family: 'IBMPlexSans-Bold',Arial,sans-serif
     font-weight: 700
     margin-top: 30px
+    text-decoration: none
     @include respond-to(tablet-portrait)
       font-size: 30px
