--- a/src/app/modules/testing/components/testing/testing.component.html
+++ b/src/app/modules/testing/components/testing/testing.component.html
@@ -7,7 +7,7 @@
 <section class="info">
   <div class="info__container container">
     <div class="info__image-wrapper">
-      <img class="info__image" src="../../../../../assets/images/manual_testing.png" alt="Зображена піктограмма людини, що означає інклюзивність">
+      <img class="info__image" src="../../../../../assets/images/manual_testing.jpg" alt="Зображена піктограмма людини, що означає інклюзивність">
     </div>
     <div class="info__text-block">
       <h2 class="info__title">Ручне</h2>
@@ -40,7 +40,7 @@
       </p>
     </div>
     <div class="info__image-wrapper left-side">
-      <img class="info__image" src="../../../../../assets/images/automatic_testing.png" alt="Зображена піктограмма людини, що означає інклюзивність">
+      <img class="info__image" src="../../../../../assets/images/automatic_testing.jpg" alt="Зображена піктограмма людини, що означає інклюзивність">
     </div>
   </div>
 </section>
