--- a/src/app/modules/core/components/about-us/about-us.component.sass
+++ b/src/app/modules/core/components/about-us/about-us.component.sass
@@ -35,6 +35,7 @@
   @include respond-to(small-desktop)
     width: 600px
   @include respond-to(tablet-portrait)
+    width: auto
     padding-top: 30px
     padding-bottom: 30px
   &__title
