--- a/src/app/modules/core/components/home/home.component.sass
+++ b/src/app/modules/core/components/home/home.component.sass
@@ -126,6 +126,8 @@
     display: flex
     justify-content: space-between
     border-bottom: 1px solid rgba(0,0,0,.15)
+    @include respond-to(tablet-landscape)
+    flex-direction: column
   &__image-wrapper
     height: 150px
     overflow: hidden
@@ -165,6 +167,9 @@
     @include respond-to(small-desktop)
       padding-top: 100px
       padding-bottom: 100px
+    @include respond-to(mobile-landscape)
+      padding-top: 80px
+      padding-bottom: 80px
   &__text
     display: block
     padding: 0 20px
@@ -175,7 +180,9 @@
     font-weight: 600
     text-decoration: none
     @include respond-to(middle-desktop)
-        font-size: 40px
+      font-size: 40px
+    @include respond-to(mobile-landscape)
+      font-size: 26px
 
 .quote
   background-color: #fcb614
