--- a/src/app/modules/study/components/study/study.component.sass
+++ b/src/app/modules/study/components/study/study.component.sass
@@ -62,6 +62,7 @@
       margin: 0 auto
       max-width: 640px
     @include respond-to(tablet-portrait)
+      display: block
       flex-direction: column
       align-items: center
   &__item
@@ -77,7 +78,7 @@
       margin-bottom: 50px
     @include respond-to(tablet-portrait)
       margin-bottom: 30px
-      width: 320px
+      width: 100%
   &__image-wrapper
     height: 300px
     overflow: hidden
